[tool.poetry]
name = "orbital-simulator"
version = "0.1.0"
description = "Software to simulate satellite behaviour on LEO"
authors = ["Grzegorz Paslawski <grzegorzpaslawski123@gmail.com>"]
readme = "README.md"
packages = [{include = "orbital_simulator"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
